--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html lang="en">
   <head>
-    <title>Micro-wave</title>
-    <script src="https://threejs.org/build/three.min.js"></script>
-    <script src="https://threejs.org/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+    <title>World dishes in microwave oven</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script>
   </head>
   <body>
+    <div id="map" width="1000" height="300"></div>
+    <iframe src="./draw.html"></iframe>
   </body>
-  <script src="./oven.js"></script>
-  
+  <script src="./mapManager.js"></script>
+  <style>
+    #map{
+      width: 100%;
+      height: 400px;
+    }
+    iframe{
+      width: 100%;
+      height: 400px;
+    }
+  </style>
 </html>
